# fournos

./: .dockerignore  .gitignore  Containerfile  Dockerfile  Fournos_Design_Document.md  Makefile  OWNERS  README.md  pyproject.toml
.cursor/plans/: fournos_design_document_87fc6306.plan.md  kueue-config.yml  test-kueue-workload.yml
.github/workflows/: builders.yaml  ci-tests.yaml  image-push.yaml  integration-tests.yaml  ruff.yaml
config/: kueue-cluster-config.yaml  kueue-config.yaml
config/deployment/: deployment.yaml
config/forge/: resolve_job.yaml
config/rbac/: rbac.yaml
dev/: job-secret-demo.yaml  mock-kueue-config.yaml  mock-psapcluster.yaml  mock-resources.yaml  mock-secrets.yaml  sample-job.yaml  setup.sh  test-connectivity-job.yaml
docs/: adding-secrets-to-vault.md
fournos/: __init__.py  __main__.py  app.py  log-config.yaml  models.py  operator.py  settings.py  state.py
fournos-cluster/: Containerfile  README.md  pyproject.toml
fournos-ui/: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt
hacks/: copy-kubeconfig-secrets-to-ns.sh  generate-ocpci-kubeconfig.sh  sync_vault_secrets.py
manifests/: crd-jobconfig.yaml  crd.yaml  deployment.yaml  kueue-config.yaml  psapcluster-crd.yaml  rbac.yaml  secrets-ns-rbac.yaml
samples/: job.yaml
tests/: conftest.py  test_abort.py  test_api.py  test_clusterless.py  test_e2e.py  test_exclusive.py  test_jobs_list.py  test_kueue_mode.py  test_lifecycle.py  test_reconciler.py  test_resolving.py  test_resource_gc.py  test_scheduling.py  test_secret_refs.py  test_shutdown.py  test_validation.py
(+116 files in other folders)
