[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fournos"
version = "0.3.1"
description = "Benchmark job operator — Kubernetes CRD + Kueue + Tekton"
requires-python = ">=3.11"
dependencies = [
    "kopf>=1.37",
    "kubernetes>=31.0",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that take longer than 30s (e.g. full lifecycle)",
]
